Fix spacing in navigation

--- a/css/style.css
+++ b/css/style.css
@@ -209,7 +209,7 @@ body {
   padding-left: 1.2rem;
   display: flex;
   flex-direction: column;
-  gap: 1.2rem;
+  gap: 1.6rem;
   font-size: 1.4rem;
   font-weight: 500;
 }
