--- a/sass/layout.scss
+++ b/sass/layout.scss
@@ -130,7 +130,7 @@
     padding-left: 1.2rem;
     display: flex;
     flex-direction: column;
-    gap: 1.2rem;
+    gap: 1.6rem;
     font-size: 1.4rem;
     font-weight: 500;
 
